# sabueso_licitaciones

./: .claudeignore  .env.example  .gitignore  Claude.md  Contexto.md  README.md  alembic.ini  config.py  diagnostico_estado.py  extraer_entry.py  feed_ejemplo.xml  main.py  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 2026_04_23_1518-2c94678d6daf_baseline_initial_schema.py  2026_04_23_1737-576d8eb9b98b_add_clientes_perfiles_matches.py  2026_04_23_1821-b1e4e3f357d3_add_texto_extraido_column.py  2026_04_23_1824-4ca0e8bf27aa_add_texto_extraido_column.py  2026_04_23_1856-25fca80de537_add_clientes_perfiles_matches.py  readme.md
database/: sabueso.db.BACKUP_PRE_ALEMBIC
sabueso_licitaciones.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: crear_cliente_prueba.py  resetear_bd.py
src/: __init__.py  analizador.py  config.py  db_manager.py  downloader.py  extractor.py  ia_client.py  logger.py  models.py  notificador.py  scraper_atom.py  utils.py
tests/: __ini__.py  test_utils.py
